--- a/.github/workflows/google-scholar-stats.yml
+++ b/.github/workflows/google-scholar-stats.yml
@@ -1,25 +1,29 @@
-name: Update Google Scholar Citations  
-on:  
-  schedule:  
-    - cron: '0 0 * * *'  # 每天运行一次  
-  workflow_dispatch:      # 允许手动触发  
+name: Get Citation Data
 
-jobs:  
-  update-citations:  
-    runs-on: ubuntu-latest  
-    steps:  
-      - uses: actions/checkout@v2  
-      
-      - name: Google Scholar Citation  
-        uses: liangyongxiang/google-scholar-stats@main  
-        id: scholar-stats  
-        with:  
-          GOOGLE_SCHOLAR_ID: 'z9zW1UgAAAAJ'  # 替换为你的ID  
-          
-      - name: Commit and Push  
-        run: |  
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"  
-          git config --global user.name "github-actions[bot]"  
-          git add .  
-          git commit -m "Update Google Scholar stats" || exit 0  
-          git push
+on: 
+ page_build: 
+ schedule:
+  - cron:  '0 8 * * *'
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Install Reqs
+      run: |
+        sudo apt-get install python3-setuptools
+    - name: Run
+      run: |
+        cd ./google_scholar_crawler
+        pip3 install -r requirements.txt
+        python3 main.py
+        cd ./results
+        git init
+        git config --local user.name "${GITHUB_ACTOR}"
+        export remote_repo="https://${GITHUB_ACTOR}:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git"
+        git add *.json
+        git commit -m "Updated Citation Data"
+        git push "${remote_repo}" HEAD:google-scholar-stats --force
+      env: 
+        GOOGLE_SCHOLAR_ID: ${{ secrets.GOOGLE_SCHOLAR_ID }}
