--- a/.github/workflows/google-scholar-stats.yml
+++ b/.github/workflows/google-scholar-stats.yml
@@ -25,6 +25,6 @@ jobs:
         export remote_repo="https://${GITHUB_ACTOR}:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git"
         git add *.json
         git commit -m "Updated Citation Data"
-        git push "${remote_repo}" HEAD:google-scholar-stats --force
+        git push "${remote_repo}" HEAD:gs-stats --force
       env: 
         GOOGLE_SCHOLAR_ID: ${{ secrets.GOOGLE_SCHOLAR_ID }}
